--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,29 @@
 {
   "presets": [
     "@babel/react",
-    ["@babel/env",{
-      "targets": {
-        "browsers": ["last 2 versions"]
+    [
+      "@babel/env",
+      {
+        "targets": {
+          "browsers": [
+            "last 2 versions"
+          ]
+        }
       }
-    }]
+    ]
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css"
+      }
+    ]
   ]
 }
