--- a/package.json
+++ b/package.json
@@ -7,11 +7,30 @@
   "scripts": {
     "build:client": "webpack --config config/webpack.config.prod.js",
     "build:server": "webpack --config config/webpack.config.server.js",
-    "start:dev": "webpack-dev-server --config config/webpack.config.dev.js",
-    "start": "node server/index.js",
-    "build": "yarn build:client && yarn build:server"
+    "start:client": "webpack-dev-server --config config/webpack.config.dev.js",
+    "start:server": "nodemon NODE_ENV=development node server/index.js ",
+    "build": "yarn build:client && yarn build:server",
+    "test": "node scripts/start"
   },
   "dependencies": {
+    "antd": "^3.26.6",
+    "axios": "^0.18.0",
+    "chalk": "^3.0.0",
+    "detect-port-alt": "^1.1.6",
+    "http-proxy-middleware": "^0.20.0",
+    "inquirer": "^7.0.3",
+    "koa": "^2.7.0",
+    "koa-connect": "^2.0.1",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "opn": "^6.0.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-router-config": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -20,30 +39,26 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.0",
     "autoprefixer": "^9.5.0",
-    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "koa": "^2.7.0",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
+    "isomorphic-style-loader": "^5.1.0",
+    "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "nodemon": "^2.0.2",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-router-config": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
+    "react-hot-loader": "^4.12.18",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
